<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <parent>
    <groupId>com.example</groupId>
    <artifactId>file-transfer</artifactId>
    <version>1.0-SNAPSHOT</version>
  </parent>
  <modelVersion>4.0.0</modelVersion>
  <artifactId>receiver</artifactId>
  <properties>
    <maven.compiler.release>21</maven.compiler.release>
  </properties>
</project>
